--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "name": "Contentstack-Nextjs-Starter-App",
+    "name": "Ericsson Enterprise Wireless Solutions",
     "short_name": "Starter-App",
     "description": "Starter app for nextjs and contentstack integration",
     "icons": [
