--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   "extends": [
       "eslint:recommended",
       "plugin:react/recommended",
-      "next/core-web-vitals"
+      "next/core-web-vitals",
+      "prettier"
   ],
   "parserOptions": {
       "ecmaFeatures": {
@@ -16,13 +17,15 @@
       "sourceType": "module"
   },
   "plugins": [
-      "react"
+      "react",
+      "prettier"
   ],
   "rules": {
       "react/prop-types":0,
       "no-undef":"off",
       "no-unused-vars": "off",
       "react-hooks/exhaustive-deps":"off",
-      "@next/next/no-img-element":"off"
+      "@next/next/no-img-element":"off",
+      "prettier/prettier": "error"
   }
 }
