--- a/package.json
+++ b/package.json
@@ -18,18 +18,28 @@
   "dependencies": {
     "@contentstack/live-preview-utils": "^1.4.0",
     "@contentstack/utils": "^1.3.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@textea/json-viewer": "^3.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "contentstack": "^3.19.0",
+    "embla-carousel-react": "^8.6.0",
     "html-react-parser": "^3.0.16",
+    "lucide-react": "^0.543.0",
     "moment": "^2.30.1",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loading-skeleton": "^3.3.1"
+    "react-loading-skeleton": "^3.3.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
