--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,28 @@
 {
   "env": {
-      "browser": true,
-      "es2021": true
+    "browser": true,
+    "es2021": true
   },
   "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "next/core-web-vitals",
-      "prettier"
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "next/core-web-vitals",
+    "prettier"
   ],
   "parserOptions": {
-      "ecmaFeatures": {
-          "jsx": true
-      },
-      "ecmaVersion": 12,
-      "sourceType": "module"
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
   },
-  "plugins": [
-      "react",
-      "prettier"
-  ],
+  "plugins": ["react", "prettier"],
   "rules": {
-      "react/prop-types":0,
-      "no-undef":"off",
-      "no-unused-vars": "off",
-      "react-hooks/exhaustive-deps":"off",
-      "@next/next/no-img-element":"off",
-      "prettier/prettier": "error"
+    "react/prop-types": 0,
+    "no-undef": "off",
+    "no-unused-vars": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "@next/next/no-img-element": "off",
+    "prettier/prettier": "error"
   }
 }
